welcome.lessons.welcome.bdr.BDR2.scala.error
BDR2:2: error: type mismatch;
 found   : Unit
 required: Boolean
while (fini=false )
           ^